dataset1235/2025-2/2318198438/users/3154614172/executions/1897677159_775838323.log
== RUN (2025-08-27 00:17:07)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = n1 + n2 + n3/3

print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 00:17:53)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = n1 + n2 + n3/3

print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 00:18:19)
-- CODE: 
n1 = int(5)
n2 = int(4)
n3 = Int(3) 

m = n1 + n2 + n3/3

print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n3 = Int(3) 
         ^^^
NameError: name 'Int' is not defined. Did you mean: 'int'?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n3 = Int(3) 
         ^^^
NameError: name 'Int' is not defined. Did you mean: 'int'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 00:18:41)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = int(n1 + n2 + n3/3)

print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 00:20:11)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = int(n1 + n2 + n3/3)

print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 00:20:11)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = int(n1 + n2 + n3/3)

print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 00:17:38)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = n1 + n2 + n3/3

print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 00:20:08)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = int(n1 + n2 + n3/3)

print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 00:18:37)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = int(n1 + n2 + n3/3)

print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 00:17:56)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = n1 + n2 + n3/3

print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 00:18:50)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = int(n1 + n2 + n3/3)

print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 00:18:44)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = int(n1 + n2 + n3/3)

print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 00:18:44)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = int(n1 + n2 + n3/3)

print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 00:19:18)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = int(n1 + n2 + n3/3)

print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 00:18:36)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3 

m = int(n1 + n2 + n3/3)

print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
